# cmake_tutorial

./: README.md
eg1/: CMakeLists.txt  main.cpp
eg2/: CMakeLists.txt
eg2-include-dir/: CMakeLists.txt
eg2-include-dir/include/: hello.h
eg2-include-dir/src/: hello.cpp  main.cpp
eg3-static-library/: CMakeLists.txt
eg4-1-dynamic-msvc/: CMakeLists.txt
eg4-1-dynamic-msvc/include/: calc.h
eg4-1-dynamic-msvc/src/: main.cpp
eg4-dynamic-libraray/: CMakeLists.txt  calc.h
eg5-subproject/: CMakeLists.txt
eg5-subproject/app/: CMakeLists.txt  main.cpp
eg5-subproject/suba/: CMakeLists.txt
eg5-subproject/suba/include/suba/: suba.h
eg5-subproject/suba/src/: suba.cpp
eg5-subproject/subb/: CMakeLists.txt
eg5-subproject/subb/include/subb/: subb.h
